fix spacing on mobile

--- a/assets/_sass/styles.scss
+++ b/assets/_sass/styles.scss
@@ -247,6 +247,7 @@ article {
 
     article {
         @include span-columns(12);
+        padding-left: 5px;
     }
 
 }
